[gd_scene load_steps=2 format=3 uid="uid://ul3xcc5grbro"]

[ext_resource type="Script" path="res://lifeforms/enemies/generic_lifeform.gd" id="1_jce4y"]

[node name="GenericLifeform" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 65
script = ExtResource("1_jce4y")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GameboardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameboardDetector"]
debug_color = Color(0.698039, 0.278431, 1, 0.419608)

[connection signal="timeout" from="ImmunityTimer" to="." method="_on_ImmunityTimer_timeout"]
[connection signal="area_entered" from="GameboardDetector" to="." method="_on_gameboard_detector_area_entered"]
